--- a/css/common.css
+++ b/css/common.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -21,4 +21,22 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+
+/* !style task 3 */
+.gallery {
+  margin: 0 auto;
+  max-width: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+  list-style-type: none;
+}
+.gallery-item {
+  width: calc((100% - 350px) / 2);
+}
+.gallery-img {
+  height: auto;
+  width: 100%;
 }
